fixed focus issue, starting to work on mobile view

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -90,10 +90,6 @@ body {
     .entry {
         padding-bottom: 10px;
     }
-    a:focus {
-        outline: none !important;
-        font-size: 18px !important;
-    }
 }
 
 .contact-wrapper {
@@ -121,10 +117,6 @@ body {
     .bottom-text {
         padding-top: 20px;
     }
-    a:focus {
-        outline: none !important;
-        font-size: 18px !important;
-    }
 }
 
 //sidebar css
@@ -135,6 +127,13 @@ body {
 
 a:focus {
     outline: none !important;
+}
+
+.nav-pills .nav-link.active {
+    font-size: 24px;
+}
+
+.nav-link-active {
     font-size: 24px;
 }
 
